--- a/src/index.css
+++ b/src/index.css
@@ -16,24 +16,27 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  /* color: #646cff; */
+  color: #ffffff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 body {
+  background-color: #272a30;
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  place-items: center;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  padding: 10px;
 }
 
 button {
@@ -57,7 +60,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #ffffff;
     background-color: #ffffff;
   }
   a:hover {
@@ -70,9 +73,18 @@ button:focus-visible {
 
 input {
   width: 100%;
+  margin: 10px;
+}
+
+hr {
+  margin: 10px;
+  width: 100%;
 }
 
 .grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   max-width: 500px;
   justify-content: space-between;
@@ -90,9 +102,11 @@ input {
 
 .card p {
   text-align: center;
+  /* color: white; */
 }
 
 .card img {
   max-width: 300px;
   border: 1px solid black;
+  margin: 0 auto;
 }
